--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Notícias da Cidade - Home</title>
 </head>
-<body class="home">
+<body id="tres-colunas" class="home">
+
+    <!--Inicio CORPO-->
     <div id="container">
+        
+        <!--Inicio AREA MENU-->
         <div id="topo">
            <h1 class="logo">Notícias Cidade</h1>
                 <ul id="navegacao">
@@ -18,7 +22,42 @@
                     <li><a id="fotos" href="fotos.html">Fotos</a></li>
                 </ul>
         </div>
+        <!--Inicio AREA MENU-->
         
+        <!--Inicio CONTEUDO-->
+        <div id="conteudo">
+
+            <div id="primario">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        conteudo
+                    </div>
+                </div>
+            </div>
+            <div id="secundario">Secundário</div>
+            <div id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        conteudo
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+        <!--Fim CONTEÚDO-->
+
     </div>
+    <!--Fim CORPO-->
+
+    <div id="container-rodape">
+       <div id="rodape">
+        &copy; Copyright 2000-2018 Notícias da Cidade
+       </div>
+    </div>
+
 </body>
 </html>
