--- a/index.html
+++ b/index.html
@@ -32,20 +32,43 @@
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
                         conteudo
+                        sadasdasdada
+                        adasdasdasdas
+                        dasdasdadas
                     </div>
                 </div>
             </div>
             <div id="secundario">Secundário</div>
             <div id="lateral">
                 <div class="caixa">
-                    <h2>Entrevistas</h2>
+                    <h2>Entrevistas sobre as Chuvas com:</h2>
                     <div class="caixa-conteudo">
-                        conteudo
+                        <ul>
+                            <li><a href="">José Oliveira</a></li>
+                            <li><a href="">Luiz Alcantara</a></li>
+                            <li><a href="">João Luiz</a></li>
+                            <li><a href="">Lazaro Ramus</a></li>
+                            <li><a href="">Silveira Alexandra</a></li>
+                        </ul>
                     </div>
                 </div>
+
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        <form action="">
+                            <label for="email">Email:</label>
+                            <input id="email" type="text" name="email" placeholder="E-mail" >
+                                <div>
+                                    <input class="submit" type="submit" value="Cadastrar">        
+                                </div>
+                        </form>
+                    </div>
+                </div>
+
             </div>
 
-
+           
 
         </div>
         <!--Fim CONTEÚDO-->
