--- a/fotos.html
+++ b/fotos.html
@@ -5,19 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Notícias da Cidade  - Fotos</title>
+    <title>Notícias da Cidade - Home</title>
 </head>
-<body class="fotos">
+<body id="uma-colunas" class="fotos">
+
+    <!--Inicio CORPO-->
     <div id="container">
+        
+        <!--Inicio AREA MENU-->
         <div id="topo">
            <h1 class="logo">Notícias Cidade</h1>
-           <ul id="navegacao">
-                <li><a id="home" href="index.html">Home</a></li>
-                <li><a id="brasil" href="brasil.html">Brasil</a></li>
-                <li><a id="inter" href="internacional.html">Internacional</a></li>
-                <li><a id="fotos" href="fotos.html">Fotos</a></li>
-         </ul>
+                <ul id="navegacao">
+                    <li><a id="home" href="index.html">Home</a></li>
+                    <li><a id="brasil" href="brasil.html">Brasil</a></li>
+                    <li><a id="inter" href="internacional.html">Internacional</a></li>
+                    <li><a id="fotos" href="fotos.html">Fotos</a></li>
+                </ul>
+        </div>
+        <!--Inicio AREA MENU-->
         
+        <!--Inicio CONTEUDO-->
+        <div id="conteudo">
+
+            <div id="primario">
+                <div class="caixa destaque">
+                    <h2>Descaques</h2>
+                    <div class="caixa-conteudo">
+                       <h3>Nova Legislação</h3>
+                       <img class="imagem-principal" src="imagens/taxi.jpg" width="98%" alt="">
+                       <p> Ewfqw dsfasf dsafasfdsa fsadfasd
+                           fadsfasf fadsfsd fsadfawsf asdfasd
+                           scfafd asdfsdf sadfasdf sadfasdf re
+                           <a href="">Leia mais . . .</a>
+                       </p>
+                    </div>
+                </div>   
+            </div>
+        </div>
+        <!--Fim CONTEÚDO-->
+
     </div>
+    <!--Fim CORPO-->
+
+    <div id="container-rodape">
+       <div id="rodape">
+        &copy; Copyright 2000-2018 Notícias da Cidade
+       </div>
+    </div>
+
 </body>
 </html>
