--- a/index.html
+++ b/index.html
@@ -28,45 +28,141 @@
         <div id="conteudo">
 
             <div id="primario">
-                <div class="caixa">
-                    <h2>Entrevistas</h2>
+                <div class="caixa destaque">
+                    <h2>Descaques</h2>
                     <div class="caixa-conteudo">
-                        conteudo
-                        sadasdasdada
-                        adasdasdasdas
-                        dasdasdadas
-                    </div>
-                </div>
-            </div>
-            <div id="secundario">Secundário</div>
-            <div id="lateral">
-                <div class="caixa">
-                    <h2>Entrevistas sobre as Chuvas com:</h2>
-                    <div class="caixa-conteudo">
-                        <ul>
-                            <li><a href="">José Oliveira</a></li>
-                            <li><a href="">Luiz Alcantara</a></li>
-                            <li><a href="">João Luiz</a></li>
-                            <li><a href="">Lazaro Ramus</a></li>
-                            <li><a href="">Silveira Alexandra</a></li>
-                        </ul>
+                       <h3>Nova Legislação</h3>
+                       <img class="imagem-principal" src="imagens/taxi.jpg" width="98%" alt="">
+                       <p> Ewfqw dsfasf dsafasfdsa fsadfasd
+                           fadsfasf fadsfsd fsadfawsf asdfasd
+                           scfafd asdfsdf sadfasdf sadfasdf re
+                           <a href="">Leia mais . . .</a>
+                       </p>
                     </div>
                 </div>
 
                 <div class="caixa">
-                    <h2>News</h2>
+                    <h2>Mundo</h2>
                     <div class="caixa-conteudo">
-                        <form action="">
-                            <label for="email">Email:</label>
-                            <input id="email" type="text" name="email" placeholder="E-mail" >
-                                <div>
-                                    <input class="submit" type="submit" value="Cadastrar">        
-                                </div>
-                        </form>
+                       <ul id="lista-noticias">
+                           <li>
+                               <a href="">
+                                   <img src="imagens/tecnologia.jpg" alt="">
+                                   <h3>Novas tecnologias 1</h3>
+                                   <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                               </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" alt="">
+                                    <h3>Novas tecnologias 2</h3>
+                                    <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                                </a>
+                             </li>
+
+                             <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" alt="">
+                                    <h3>Novas tecnologias 3</h3>
+                                    <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                                </a>
+                             </li>
+
+                             <li>
+                                <a href="">
+                                    <img src="imagens/tecnologia.jpg" alt="">
+                                    <h3>Novas tecnologias 4</h3>
+                                    <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                                </a>
+                             </li>
+                       </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div id="secundario">
+                <div class="caixa entrevista">
+                    <h2>Ultima Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                       <h3>Entrevista com Felipe Silva</h3>
+                       <img class="imagem" src="imagens/doutor.jpg" width="98%" alt="">
+                       <p> Ewfqw dsfasf dsafasfdsa fsadfasd
+                           fadsfasf fadsfsd fsadfawsf asdfasd
+                           scfafd asdfsdf sadfasdf sadfasdf re
+                           <a href="">Leia mais . . .</a>
+                       </p>
+                    </div>
+                </div>
+                <!--Em baixo de Ultima Noticia-->
+                <div class="caixa">
+                    <h2>Notícias Recentes</h2>
+                    <div class="caixa-conteudo">
+                       <ul id="lista-noticias">
+                           <li>
+                               <a href="">
+                                   <img src="imagens/tecnologia.jpg" alt="">
+                                   <h3>O joelho do sem perna</h3>
+                                   <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                               </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <img src="imagens/cidade.jpg" alt="">
+                                    <h3>Como pintar o cabelo do careca</h3>
+                                    <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                                </a>
+                             </li>
+
+                             <li>
+                                <a href="">
+                                    <img src="imagens/taxi.jpg" alt="">
+                                    <h3>O Taxi que leva pessoas</h3>
+                                    <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                                </a>
+                             </li>
+
+                             <li>
+                                <a href="">
+                                    <img src="imagens/doutor.jpg" alt="">
+                                    <h3>O Dr que faz cirurgias</h3>
+                                    <p>Loren yy cfgsds dfsf sd dsfsdfsd dsf dsfsdfcvfg ds. . .</p>
+                                </a>
+                             </li>
+                       </ul>
                     </div>
                 </div>
 
             </div>
+
+                <div id="lateral">
+                    <div class="caixa">
+                        <h2>Entrevistas sobre as Chuvas com:</h2>
+                        <div class="caixa-conteudo">
+                            <ul>
+                                <li><a href="">José Oliveira</a></li>
+                                <li><a href="">Luiz Alcantara</a></li>
+                                <li><a href="">João Luiz</a></li>
+                                <li><a href="">Lazaro Ramus</a></li>
+                                <li><a href="">Silveira Alexandra</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <h2>News</h2>
+                        <div class="caixa-conteudo">
+                            <form action="">
+                                <label for="email">Email:</label>
+                                <input id="email" type="text" name="email" placeholder="E-mail" >
+                                    <div>
+                                        <input class="submit" type="submit" value="Cadastrar">        
+                                    </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
            
 
