--- a/fotos.html
+++ b/fotos.html
@@ -29,15 +29,13 @@
 
             <div id="primario">
                 <div class="caixa destaque">
-                    <h2>Descaques</h2>
+                    <h2>Fotos</h2>
                     <div class="caixa-conteudo">
-                       <h3>Nova Legislação</h3>
+                       <h3>Imagens da página em boa qualidade</h3>
+                       <img class="imagem-principal" src="imagens/cidade.jpg" width="98%" alt="">
+                       <img class="imagem-principal" src="imagens/tecnologia.jpg" width="98%" alt="">
+                       <img class="imagem-principal" src="imagens/doutor.jpg" width="98%" alt="">
                        <img class="imagem-principal" src="imagens/taxi.jpg" width="98%" alt="">
-                       <p> Ewfqw dsfasf dsafasfdsa fsadfasd
-                           fadsfasf fadsfsd fsadfawsf asdfasd
-                           scfafd asdfsdf sadfasdf sadfasdf re
-                           <a href="">Leia mais . . .</a>
-                       </p>
                     </div>
                 </div>   
             </div>
