--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                        <p> Ewfqw dsfasf dsafasfdsa fsadfasd
                            fadsfasf fadsfsd fsadfawsf asdfasd
                            scfafd asdfsdf sadfasdf sadfasdf re
-                           <a href="">Leia mais . . .</a>
+                           <a href="novaLegistacao.html">Leia mais . . .</a>
                        </p>
                     </div>
                 </div>
